--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,6 +7,6 @@ Server:
     Port: 6697
     SSL: true
 Channel:
-    Name: #channel
+    Name: "#channel"
 ModChannel:
-    Name: #channel
+    Name: "#channel"
