--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,15 +9,20 @@ commands:
         usage: |
             /<command> remote
             /<command> reconnect
+            /<command> clear
 permissions:
     farion.*:
         description: Gives access to all Farion commands
         children:
             farion.remoteusernames: true
             farion.reconnect: true
+            farion.clear: true
     farion.remoteusernames:
         description: Allows you to view a list of IRC nicks permitted to use console
         default: op
     farion.reconnect:
         description: Allows you to force the bot to reconnect to the server
+        default: op
+    farion.clear:
+        description: Allows you to clear the bot's send queue
         default: op
