Disable ssl by default, requires too much external knowledge to set up properly, or it's broken.  One of the two.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,8 +6,8 @@ Bot:
     RetryConnect: true
 Server:
     Hostname: irc.esper.net
-    Port: 6697
-    SSL: true
+    Port: 6667
+    SSL: false
 Channel:
     Name: "#channel"
 ModChannel:
