Add in config for message parsing

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,3 +14,8 @@ ModChannel:
     Name: "#channel"
 RemoteConsoleUsers:
     - "Username"
+Message:
+    IrcMessage: "<{username}> {message}"
+    IrcMeMessage: "* {username} {message}"
+    GameMessage: "&f[IRC] <{nickname}> {message}"
+    GameMeMessage: "&f[IRC] * {nickname} {message}"
