--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
                 </executions>
             </plugin>
         </plugins>
+        <extensions>
+             <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-file</artifactId>
+                <version>2.2</version>
+            </extension>
+        </extensions>
     </build>
     <repositories>
         <repository>
@@ -110,6 +117,12 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+    <distributionManagement>
+        <repository>
+            <id>nuclearw-repo</id>
+            <url>file:///var/lib/jenkins/repo</url>
+        </repository>
+    </distributionManagement>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
