--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>LATEST</version>
+            <version>1.4.6-R0.3</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
