--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.nuclearw.farion</groupId>
     <artifactId>Farion</artifactId>
-    <version>0.9-1.5.1-dev</version>
+    <version>0.9-1.5.2-dev</version>
     <name>Farion</name>
     <url>https://github.com/NuclearW/Farion</url>
     <issueManagement>
@@ -106,7 +106,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.5.1-R0.1-SNAPSHOT</version>
+            <version>1.5.2-R0.1</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
